spacing fixes

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -210,19 +210,23 @@ ul {
 .user-card {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     overflow-x: scroll;
     white-space: nowrap;
-
+    padding-bottom: 10px;
+    margin-top: 100px;
 }
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     min-width: 275px;
     margin: auto;
+    margin-left: 30px;
+    margin-right: 30px;
     text-align: center;
     border-radius: 15px;
     display: inline-block;
+    background-color: white;
 }
 
 button{
@@ -462,4 +466,40 @@ button:hover, a:hover{
     color: rgb(13, 201, 241);
     font-size: larger;
     cursor:pointer;
+}
+
+.username-card-name {
+  width: 200px;
+  /* white-space: normal;
+  word-break: break-all;
+  overflow: hidden;
+  display: block; */
+  /* font-size: smaller; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 auto;
+}
+
+.users-btn {
+  margin: 0 auto;
+  width: 80%;
+  font-size: smaller;
+  margin-bottom: 10px;
+}
+
+/* .user-header {
+  background-image: url('/logo5.png');
+  width: 100%;
+  height: 30vh;
+  background-size: 100%;
+  background-position: center center;
+  /* background-size: cover; */
+  /* background-position: 0px 1vh; */
+  /* background-repeat: repeat-x; */
+/* } */
+
+.background-users {
+  background-image: linear-gradient(to top right, rgb(7, 72, 151), rgb(61, 106, 170));
+  height: 100vh;
 }
